Added angular gameFanController, gameFanController api, gameFanRepository, logic to add GameFan to a Meetup and unit test for gameFanController api

--- a/RpgGameHub/Content/Site.css
+++ b/RpgGameHub/Content/Site.css
@@ -145,6 +145,14 @@ textarea {
 .label-meetup {
   background-color: #0094ff;
 }
+.attending {
+  position: relative;
+  top: -105px;
+  left: 250px;
+  font-size: 18px;
+  max-width: 100px;
+  min-width: 100px;
+}
 body,
 h1,
 h2,
