--- a/RpgGameHub/Content/Site.less
+++ b/RpgGameHub/Content/Site.less
@@ -177,6 +177,15 @@ textarea {
     background-color:@color0
 }
 
+.attending {
+    position: relative;
+    top: -105px;
+    left: 250px;
+    font-size:18px;
+    max-width:100px;
+    min-width:100px;
+}
+
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6  {
 	font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
