fine tuning details page

--- a/RpgGameHub/Content/Site.css
+++ b/RpgGameHub/Content/Site.css
@@ -129,6 +129,11 @@ textarea {
 .meetupDetails {
   font-size: 20px;
 }
+.meetupStatus {
+  position: relative;
+  top: -33px;
+  left: 150px;
+}
 .gameName {
   font-size: 24px;
   -ms-border-radius: 8px;
@@ -225,4 +230,12 @@ span.field-validation-error {
   left: 114px;
   position: relative;
   top: -98px;
+}
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
+  display: none !important;
 }
