--- a/RpgGameHub/Content/Site.less
+++ b/RpgGameHub/Content/Site.less
@@ -157,6 +157,11 @@ textarea {
 	font-size:20px;
 }
 
+.meetupStatus {
+    position: relative;
+    top: -33px;
+    left: 150px;
+}
 
 .gameName {
 	font-size:24px;
@@ -246,4 +251,8 @@ span.field-validation-error {
 	left: 114px;
 	position: relative;
 	top: -98px;
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
 }
