added scripts, api, controller, migration associated with RpgGameType tables

--- a/RpgGameHub/Views/Meetup/Mine.cshtml
+++ b/RpgGameHub/Views/Meetup/Mine.cshtml
@@ -31,7 +31,7 @@
                 <div class="game">
                     <div class="details">
                         @{
-                            var rpgGame = ((RpgGameType)meetup.RgpGameId).EnumDesc();
+                            var rpgGame = ((RpgGameTypeEnum)meetup.RgpGameId).EnumDesc();
                         }
                         <span class="rpgGame">@rpgGame</span>
                     </div>
